--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@
 
     <LinearLayout
         android:id="@+id/container5"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="410dp"
+        android:layout_height="66dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,20 +29,23 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginStart="3dp"
             android:layout_marginEnd="3dp"
             android:layout_weight="1"
-            android:layout_marginStart="3dp"
             android:text="log in"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginStart="3dp"
             android:layout_marginEnd="3dp"
             android:layout_weight="1"
-            android:layout_marginStart="3dp"
             android:text="New alarm"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -53,6 +56,7 @@
             android:layout_marginEnd="3dp"
             android:layout_weight="1"
             android:text="New Event"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </LinearLayout>
